Subida pln_sesion_04_03_auto_atencion_pln

--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/pln_sesion_04_03_auto_atencion_pln.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/pln_sesion_04_03_auto_atencion_pln.ipynb
@@ -6,20 +6,7 @@
     "tags": []
    },
    "source": [
-    "<figure>\n",
-    "<img src=\"../Imagenes/logo-final-ap.png\"  width=\"80\" height=\"80\" align=\"left\"/> \n",
-    "</figure>\n",
-    "\n",
-    "# <span style=\"color:blue\"><left>Aprendizaje Profundo</left></span>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "# <span style=\"color:red\"><center>Mecanismos de auto-atención</center></span>"
+    "# <span style=\"color:#F72585\"><center>Mecanismos de auto-atención</center></span>"
    ]
   },
   {
@@ -28,110 +15,20 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/child_engaging_in_joint_attention.jpg\" width=\"800\" height=\"600\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/espiral.jpg\" width=\"700\" height=\"600\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "</figcaption>\n",
     "</figure>\n",
     "\n",
-    "Fuente: <a href=\"https://commons.wikimedia.org/wiki/File:Illustration_of_caregiver_and_child_engaging_in_joint_attention.jpg\">Rita.obeid6</a>, <a href=\"https://creativecommons.org/licenses/by-sa/3.0\">CC BY-SA 3.0</a>, via Wikimedia Commons"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "##   <span style=\"color:blue\">Autores</span>"
+    "Fuente: [Pexels](https://www.pexels.com/es-es/foto/construccion-solida-en-espiral-con-lineas-verticales-1198828/)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Alvaro  Montenegro, PhD, ammontenegrod@unal.edu.co\n",
-    "- Daniel  Montenegro, Msc, dextronomo@gmail.com "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##   <span style=\"color:blue\">Asesora Medios y Marketing digital</span>\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "- Maria del Pilar Montenegro, pmontenegro88@gmail.com "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## <span style=\"color:blue\">Referencias</span>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. [Illustrated Auto-attención](https://towardsdatascience.com/illustrated-self-attention-2d627e33b20a)\n",
-    "1. [Illustrated Attention](https://towardsdatascience.com/attn-illustrated-attention-5ec4ad276ee3#0458)\n",
-    "1. [Neural Machine Translation by Jointly Learning to Align and Translate (Bahdanau et. al, 2015)](https://arxiv.org/pdf/1409.0473.pdf)\n",
-    "1. [Effective Approaches to Attention-based Neural Machine Translation (Luong et. al, 2015)](https://arxiv.org/pdf/1508.04025.pdf)\n",
-    "1. [Attention Is All You Need (Vaswani et. al, 2017)](https://arxiv.org/pdf/1706.03762.pdf)\n",
-    "1. [Self-Attention GAN (Zhang et. al, 2018)](https://arxiv.org/pdf/1805.08318.pdf)\n",
-    "1. [Sequence to Sequence Learning with Neural Networks (Sutskever et. al, 2014)](https://arxiv.org/pdf/1409.3215.pdf)\n",
-    "1. [TensorFlow’s seq2seq Tutorial with Attention (Tutorial on seq2seq+attention)](https://github.com/tensorflow/nmt)\n",
-    "1. [Lilian Weng’s Blog on Attention (Great start to attention)](https://lilianweng.github.io/lil-log/2018/06/24/attention-attention.html#a-family-of-attention-mechanisms)\n",
-    "1. [Jay Alammar’s Blog on Seq2Seq with Attention (Great illustrations and worked example on seq2seq+attention)](https://jalammar.github.io/visualizing-neural-machine-translation-mechanics-of-seq2seq-models-with-attention/)\n",
-    "1. [Google’s Neural Machine Translation System: Bridging the Gap between Human and Machine Translation (Wu et. al, 2016)](https://arxiv.org/pdf/1609.08144.pdf)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## <span style=\"color:blue\">Contenido</span>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* [Introducción](#Introducción)\n",
-    "* [Modelo seq2seq](#Modelo-seq2seq)\n",
-    "* [Auto-atención](#Auto-atención)\n",
-    "    * [Paso 1. Preparar las entradas](#Paso-1.-Preparar-las-entradas)\n",
-    "    * [Paso 2. Inicializar los pesos](#Paso-2.-Inicializar-los-pesos)\n",
-    "    * [Paso 3. Obtener claves, consultas y valores](#Paso-3.-Obtener-claves,-consultas-y-valores)\n",
-    "    * [Paso 4. Cálculo de los puntajes de auto-atención para las entradas](#Paso-4.-Cálculo-de-los-puntajes-de-auto-atención-para-las-entradas)\n",
-    "    * [Paso 5. Cálculo del puntaje softmax](#Paso-5.-Cálculo-del-puntaje-softmax)\n",
-    "    * [Paso 6. Multiplica los puntajes softmax con los valores para cada consulta](#Paso-6.-Multiplica-los-puntajes-softmax-con-los-valores-para-cada-consulta)\n",
-    "    * [Paso 7. Suma pesada de valores para conseguir los vectores de contexto](#Paso-7.-Suma-pesada-de-valores-para-conseguir-los-vectores-de-contexto)\n",
-    "    * [Ejemplo de implementación en Python](#Ejemplo-de-implementación-en-Python)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## <span style=\"color:blue\">Introducción</span>"
+    "## <span style=\"color:#4361EE\">Introducción</span>"
    ]
   },
   {
@@ -144,24 +41,27 @@
     "\n",
     "Las arquitecturas basadas en transformers que se utilizan principalmente en el modelado de tareas de comprensión del lenguaje, evitan el uso de la recurrencia en la red neuronal y, en cambio, confían por completo en los mecanismos de auto-atención para generar dependencias globales entre entradas y salidas. \n",
     "\n",
-    "\n",
-    "La auto-atención es similar a la atención. Comparten fundamentalmente el mismo concepto y muchas operaciones matemáticas comunes.  Un módulo de auto-atención toma $n$ entradas y devuelve $n$ salidas. ¿Qué pasa en este módulo? En términos sencillos, el mecanismo de auto atención permite que las entradas interactúen entre sí (`auto`) y descubran a quién deben prestar más atención (`atención`). Los resultados son agregados de estas interacciones y puntuaciones de atención.\n",
-    "\n",
-    "\n",
+    "La auto-atención es similar a la atención. Comparten fundamentalmente el mismo concepto y muchas operaciones matemáticas comunes.  Un módulo de auto-atención toma $n$ entradas y devuelve $n$ salidas. ¿Qué pasa en este módulo? En términos sencillos, el mecanismo de auto-atención permite que las entradas interactúen entre sí (`auto`) y descubran a quién deben prestar más atención (`atención`). Los resultados son agregados de estas interacciones y puntuaciones de atención."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "En esta lección  revisamos los detalles de construcción de los mecanismos de atención.\n",
     "\n",
-    "Supongamos que tenemos un secuencia con tres entradas $e_1, e_2$ y $e_3$. Un mecanismo de atención siguen el siguiente algoritmo.\n",
+    "Supongamos que tenemos una secuencia con tres entradas $e_1, e_2$ y $e_3$. Un mecanismo de atención siguen el siguiente algoritmo.\n",
     "\n",
     "\n",
     "\n",
     "1. Prepara las entradas\n",
-    "1. Inicializa los pesos\n",
-    "1. Obtiene `clave` (key), `consulta` (query) y `valor` (value) a aprtir de las entradas.\n",
-    "1. Calcula las puntuaciones de atención para la entrada $e_1$.\n",
-    "1. Calcula el softmax de las puntuaciones.\n",
-    "1. Multiplica las puntuaciones softmax con los `valores`\n",
-    "1. Sumar `valores ponderados` para obtener la Salida 1\n",
-    "1. Repite los pasos 4 a 7 para la entrada $e_2$ y la entrada $e_3$\n",
+    "2. Inicializa los pesos\n",
+    "3. Obtiene `clave` (key), `consulta` (query) y `valor` (value) a aprtir de las entradas.\n",
+    "4. Calcula las puntuaciones de atención para la entrada $e_1$.\n",
+    "5. Calcula el softmax de las puntuaciones.\n",
+    "6. Multiplica las puntuaciones softmax con los `valores`\n",
+    "7. Sumar `valores ponderados` para obtener la Salida 1\n",
+    "8. Repite los pasos 4. al 7. para la entrada $e_2$ y la entrada $e_3$\n",
     "\n"
    ]
   },
@@ -169,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <span style=\"color:blue\">Auto-atención</span>"
+    "## <span style=\"color:#4361EE\">Auto-atención</span>"
    ]
   },
   {
@@ -239,9 +139,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cada una de las entradas se transforman en tres diferentes vectores de algún tamaño. Para ello se construyen tres transformaciones lineales (o afines), digamos $W_k$, $W_q$ y $W_v$. Esta matrices son parámetros de la red neuronal que son inicializados aleatoriamente, o con algún procedimiento estándar  para  inicializar  los  pesos.\n",
+    "Cada una de las entradas se transforman en tres diferentes vectores de algún tamaño. Para ello se construyen tres transformaciones lineales (o afines), digamos $W_k$, $W_q$ y $W_v$. Estas matrices son parámetros de la red neuronal que son inicializados aleatoriamente, o con algún procedimiento estándar  para  inicializar  los  pesos.\n",
     "\n",
-    "Para esta ilustración, supondremos que las matrices de pesos son dadas por\n",
+    "Para esta ilustración, supondremos que las matrices de pesos son dadas por:\n",
     "\n",
     "\n",
     "\n",
@@ -288,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Claves (keys)"
+    "#### **Claves (keys)**"
    ]
   },
   {
@@ -327,14 +227,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Valores (values)"
+    "#### **Valores (values)**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los valores se obtiene como\n",
+    "Los valores se obtiene como:\n",
     "\n",
     "$$\n",
     "V = E \\times W_v = \n",
@@ -366,14 +266,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Consultas (queries)"
+    "#### **Consultas (queries)**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finalmente las consultas resultantes son\n",
+    "Finalmente las consultas resultantes son:\n",
     "\n",
     "$$\n",
     "Q = E \\times W_q = \n",
@@ -407,7 +307,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/self_attention_2.png\" width=\"800\" height=\"800\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/self_attention_2.gif\" width=\"800\" height=\"800\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Auto-atención: Obtención de claves consultas y valores.</p>\n",
@@ -437,7 +337,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/self_attention_3.png\" width=\"800\" height=\"800\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/self_attention_3.gif\" width=\"800\" height=\"800\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Auto-atención: Obtención de puntajes de auto-atención para la primera consulta.</p>\n",
@@ -451,9 +351,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como se muestra en la anterior ilustración, se toma la consulta obtenida para la primera entrada, que en el ejemplo es $e_1 =[1, 0, 2]$. Los pesos de auto-atención son una medida de similaridad, entre la consulta y cada una de las claves, como se ha estudiado en las lecciones atención. La función de auto-atención se denotará $a$ . En este caso el resultado se obtiene haciendo el producto escalar (producto punto) entre la consulta asociada  a $e_1$, es decir, $q_1$ y cada una de las claves, es decir $a(q_1, c_i)= <q_1, c_i>, i =1,2,3$.\n",
+    "Como se muestra en la anterior ilustración, se toma la consulta obtenida para la primera entrada, que en el ejemplo es $e_1 =[1, 0, 2]$. Los pesos de auto-atención son una medida de similaridad, entre la consulta y cada una de las claves, como se ha estudiado en las lecciones de atención. La función de auto-atención se denotará como $a$ . En este caso el resultado se obtiene haciendo el producto escalar (producto punto) entre la consulta asociada  a $e_1$, es decir, $q_1$ y cada una de las claves, es decir $a(q_1, k_i)= <q_1, k_i>, i =1,2,3$.\n",
     "\n",
-    "Escrito en forma matricial, los pesos de auto-atención para la entrada 1 se calculan como\n",
+    "Escrito en forma matricial, los pesos de auto-atención para la entrada 1 se calculan como:\n",
     "\n",
     "\n",
     "$$\n",
@@ -464,7 +364,7 @@
     "\\end{pmatrix} =[2, 4, 4].\n",
     "$$\n",
     "\n",
-    "Los pesos de auto-atención completos, es decir para todas las  consultas  se calculan mediante\n",
+    "Los pesos de auto-atención completos, es decir para todas las  consultas  se calculan mediante:\n",
     "\n",
     "$$\n",
     "P = Q \\times  K^T =\n",
@@ -500,7 +400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Transformamos los puntajes a la escala softmax. Por ejemplo softmax([2, 4, 4]) = [0.06, 0.47, 0.47]. Observe que softmax define una distribución discreta de probabilidad. Ele cálculo completo para el ejemplo es\n",
+    "Transformamos los puntajes a la escala softmax. Por ejemplo softmax([2, 4, 4]) = [0.06, 0.47, 0.47]. Observe que softmax define una distribución discreta de probabilidad. El cálculo completo para el ejemplo es:\n",
     "\n",
     "\n",
     "$$\n",
@@ -526,27 +426,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <span style=\"color:#4CC9F0\">Paso 6. Multiplica los puntajes softmax con los valores para cada consulta</span>"
+    "### <span style=\"color:#4CC9F0\">Paso 6. Multiplica los puntajes softmax con los valores, para cada consulta</span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para la consulta 1 se tiene\n",
-    "* 0.06 * [1, 2, 3] = [0.06, 0.13, 0.19]\n",
-    "* 0.47 * [2, 8, 0] = [0.94, 3.75, 0.00]\n",
-    "* 0.47 * [2, 6, 3] = [0.94, 2.81, 1.40]\n",
+    "Para la consulta 1 se tiene:\n",
+    "- $\\: 0.06 \\cdot [1,\\: 2,\\: 3] = [0.06,\\: 0.13,\\: 0.19]$\n",
+    "- $\\: 0.47 \\cdot [2,\\: 8,\\: 0] = [0.94,\\: 3.75,\\: 0.00]$\n",
+    "- $\\: 0.47 \\cdot [2,\\: 6,\\: 3] = [0.94,\\: 2.81,\\: 1.40]$\n",
     "\n",
-    "Para la consulta 2\n",
-    "* 0.00 * [1, 2, 3] = [0.00, 0.00, 0.00]\n",
-    "* 0.98 * [2, 8, 0] = [1.96, 7.86, 0.00]\n",
-    "* 0.02 * [2, 6, 3] = [0.04, 0.11, 0.05]\n",
+    "Para la consulta 2 se tiene:\n",
+    "- $\\: 0.00 \\cdot [1,\\: 2,\\: 3] = [0.00,\\: 0.00,\\: 0.00]$\n",
+    "- $\\: 0.98 \\cdot [2,\\: 8,\\: 0] = [1.96,\\: 7.86,\\: 0.00]$\n",
+    "- $\\: 0.02 \\cdot [2,\\: 6,\\: 3] = [0.04,\\: 0.11,\\: 0.05]$\n",
     "\n",
-    "Para la consulta 3\n",
-    "* 0.00 * [1, 2, 3] = [0.00, 0.00, 0.00]\n",
-    "* 0.88 * [2, 8, 0] = [1.76, 7.04, 0.00]\n",
-    "* 0.12 * [2, 6, 3] = [0.24, 0.72, 0.36]\n",
+    "Para la consulta 3 se tiene:\n",
+    "- $\\: 0.00 \\cdot [1,\\: 2,\\: 3] = [0.00,\\: 0.00,\\: 0.00]$\n",
+    "- $\\: 0.88 \\cdot [2,\\: 8,\\: 0] = [1.76,\\: 7.04,\\: 0.00]$\n",
+    "- $\\: 0.12 \\cdot [2,\\: 6,\\: 3] = [0.24,\\: 0.72,\\: 0.36]$\n",
     "\n"
    ]
   },
@@ -563,9 +463,9 @@
    "source": [
     "Cada salida (vector de contexto) se obtiene como la suma de los vectores pesados asociados a cada consulta así:\n",
     "\n",
-    "* salida 1: [0.06, 0.13, 0.19] + [0.94, 3.75, 0.00] + [0.94, 2.81, 1.40] = [1.94, 6.68, 1.60]\n",
-    "* salida 2: [0.00, 0.00, 0.00] + [1.96, 7.86, 0.00] + [0.04, 0.11, 0.05] = [2.00, 7.96, 0.05]\n",
-    "* salida 3: [0.00, 0.00, 0.00] + [1.76, 7.04, 0.00] + [0.24, 0.72, 0.36] = [2.00, 7.76, 0.36]\n",
+    "* salida 1: $[0.06,\\: 0.13,\\: 0.19] + [0.94,\\: 3.75,\\: 0.00] + [0.94,\\: 2.81,\\: 1.40] = [1.94,\\: 6.68,\\: 1.60]$\n",
+    "* salida 2: $[0.00,\\: 0.00,\\: 0.00] + [1.96,\\: 7.86,\\: 0.00] + [0.04,\\: 0.11,\\: 0.05] = [2.00,\\: 7.96,\\: 0.05]$\n",
+    "* salida 3: $[0.00,\\: 0.00,\\: 0.00] + [1.76,\\: 7.04,\\: 0.00] + [0.24,\\: 0.72,\\: 0.36] = [2.00,\\: 7.76,\\: 0.36]$\n",
     "\n",
     "La siguiente imagen muestra el modelo completo de auto-atención. Los valores se redondearon. "
    ]
@@ -595,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -748,6 +648,32 @@
     "print('wV\\n',np.round(wV,2))\n",
     "print('O\\n',np.round(O,2))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## <span style=\"color:#4361EE\">Referencias</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. [Illustrated Auto-attención](https://towardsdatascience.com/illustrated-self-attention-2d627e33b20a)\n",
+    "1. [Illustrated Attention](https://towardsdatascience.com/attn-illustrated-attention-5ec4ad276ee3#0458)\n",
+    "1. [Neural Machine Translation by Jointly Learning to Align and Translate (Bahdanau et. al, 2015)](https://arxiv.org/pdf/1409.0473.pdf)\n",
+    "1. [Effective Approaches to Attention-based Neural Machine Translation (Luong et. al, 2015)](https://arxiv.org/pdf/1508.04025.pdf)\n",
+    "1. [Attention Is All You Need (Vaswani et. al, 2017)](https://arxiv.org/pdf/1706.03762.pdf)\n",
+    "1. [Self-Attention GAN (Zhang et. al, 2018)](https://arxiv.org/pdf/1805.08318.pdf)\n",
+    "1. [Sequence to Sequence Learning with Neural Networks (Sutskever et. al, 2014)](https://arxiv.org/pdf/1409.3215.pdf)\n",
+    "1. [TensorFlow’s seq2seq Tutorial with Attention (Tutorial on seq2seq+attention)](https://github.com/tensorflow/nmt)\n",
+    "1. [Lilian Weng’s Blog on Attention (Great start to attention)](https://lilianweng.github.io/lil-log/2018/06/24/attention-attention.html#a-family-of-attention-mechanisms)\n",
+    "1. [Jay Alammar’s Blog on Seq2Seq with Attention (Great illustrations and worked example on seq2seq+attention)](https://jalammar.github.io/visualizing-neural-machine-translation-mechanics-of-seq2seq-models-with-attention/)\n",
+    "1. [Google’s Neural Machine Translation System: Bridging the Gap between Human and Machine Translation (Wu et. al, 2016)](https://arxiv.org/pdf/1609.08144.pdf)\n"
+   ]
   }
  ],
  "metadata": {
@@ -766,7 +692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "toc-autonumbering": false
  },
