--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/pln_sesion_04_03_auto_atencion_pln.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/pln_sesion_04_03_auto_atencion_pln.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/espiral.jpg\" width=\"700\" height=\"600\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/espiral.jpg\" width=\"700\" height=\"600\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "</figcaption>\n",
@@ -92,7 +92,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/self_attention_1.gif\" width=\"800\" height=\"800\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/self_attention_1.gif\" width=\"800\" height=\"800\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Auto-atención: Entradas.</p>\n",
@@ -307,7 +307,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/self_attention_2.gif\" width=\"800\" height=\"800\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/self_attention_2.gif\" width=\"800\" height=\"800\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Auto-atención: Obtención de claves consultas y valores.</p>\n",
@@ -337,7 +337,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/self_attention_3.gif\" width=\"800\" height=\"800\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/self_attention_3.gif\" width=\"800\" height=\"800\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Auto-atención: Obtención de puntajes de auto-atención para la primera consulta.</p>\n",
@@ -476,7 +476,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/self_attention_4.png\" width=\"800\" height=\"800\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/self_attention_4.png\" width=\"800\" height=\"800\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Auto-atención: Cálculo completo de las últimas dos salidas</p>\n",
