--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_Transformers-TF2.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_Transformers-TF2.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/toy_transformer.jpg\" width=\"700\" height=\"700\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/toy_transformer.jpg\" width=\"700\" height=\"700\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -50,7 +50,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/Transformer_original.png\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/Transformer_original.png\" width=\"400\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Transformer</p>\n",
@@ -406,7 +406,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/scaled_attention.png\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/scaled_attention.png\" width=\"400\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Atención de producto escalado</p>\n",
@@ -637,7 +637,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/multi_head_attention.png\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/multi_head_attention.png\" width=\"400\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Atención multi-cabeza</p>\n",
@@ -845,7 +845,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/Transformer_original.png\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/Transformer_original.png\" width=\"400\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Transformer</p>\n",
