--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_Char_generator_RNN.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_Char_generator_RNN.ipynb
@@ -20,14 +20,14 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/text_generation_sampling.png\" width=\"600\" height=\"600\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/maquina_de_escribir.jpg\" width=\"600\" height=\"600\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Muestreo  de palabras</p>\n",
     "</figcaption>\n",
     "</figure>\n",
     "\n",
-    "Fuente: [TensorFlow](https://www.tensorflow.org/tutorials/text/text_generation)"
+    "Fuente: [Pexels](https://www.pexels.com/es-es/foto/reescribir-y-editar-texto-en-una-maquina-de-escribir-3631711/)"
    ]
   },
   {
@@ -1198,7 +1198,7 @@
     "</figcaption>\n",
     "</figure>\n",
     "\n",
-    "Fuente: [TensorFlow](https://www.tensorflow.org/tutorials/text/text_generation)"
+    "Fuente: [TensorFlow](https://www.tensorflow.org/text/tutorials/text_generation#build_the_model)"
    ]
   },
   {
@@ -1874,7 +1874,7 @@
     "</figcaption>\n",
     "</figure>\n",
     "\n",
-    "Fuente: [TensorFlow](https://www.tensorflow.org/tutorials/text/text_generation)"
+    "Fuente: [TensorFlow](https://www.tensorflow.org/text/tutorials/text_generation#generate_text)"
    ]
   },
   {
@@ -2173,7 +2173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
