--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_Clustering_docs.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_Clustering_docs.ipynb
@@ -20,6 +20,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<figure>\n",
+    "<center>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/dulces.jpg\" width=\"600\" height=\"600\" align=\"center\"/>\n",
+    "</center>\n",
+    "</figure>\n",
+    "\n",
+    "Fuente: [Pexels](https://www.pexels.com/es-es/foto/comida-creativo-azucar-evento-4016509/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## <span style=\"color:#4361EE\">Introducción</span>"
    ]
   },
@@ -236,8 +249,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
     "<figure>\n",
     "<center>\n",
     "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/Skip-Gram-architecture.jpg\" width=\"500\" height=\"600\" align=\"center\"/>\n",
@@ -248,7 +259,7 @@
     "</figure>\n",
     "\n",
     "Fuente: \n",
-    "[Exploring chemical space using natural language processing](https://www.researchgate.net/publication/339013257_Exploring_chemical_space_using_natural_language_processing_methodologies_for_drug_discovery/figures?lo=1)\n"
+    "[Exploring chemical space using natural language processing](https://www.researchgate.net/publication/339013257_Exploring_chemical_space_using_natural_language_processing_methodologies_for_drug_discovery/figures?lo=1)"
    ]
   },
   {
@@ -331,8 +342,7 @@
     "</figcaption>\n",
     "</figure>\n",
     "\n",
-    "Fuente: \n",
-    "[word2vec arquitecture](https://figshare.com/articles/figure/_i_Word2Vec_i_architecture_The_figure_shows_two_variants_of_word2vec_architecture_CBOW_and_Skip_gram_26_for_a_sample_/11982951)\n"
+    "Fuente: [Journals Plos](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0216636#pone-0216636-g001)"
    ]
   },
   {
@@ -2717,7 +2727,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
