--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_FastText_Intro.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_FastText_Intro.ipynb
@@ -319,7 +319,7 @@
    "id": "35a9f3f4-9374-45bb-8658-d09174a549ac",
    "metadata": {},
    "source": [
-    "## <span style=\"color:#4361EE\">Uso del Modelo (Ejemplo de juguete)</span>"
+    "### <span style=\"color:#4CC9F0\">Uso del Modelo (Ejemplo de juguete)</span>"
    ]
   },
   {
@@ -1877,7 +1877,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
