--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_Introduccion.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_Introduccion.ipynb
@@ -1072,7 +1072,7 @@
     "</figure>\n",
     "\n",
     "Fuente: \n",
-    "[Intuition behind LDA](http://www.cs.cornell.edu/courses/cs6784/2010sp/lecture/30-BleiEtAl03.pdf)"
+    "[Intuition behind LDA](https://www.cs.columbia.edu/~blei/papers/Blei2012.pdf)"
    ]
   },
   {
@@ -1819,7 +1819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.4"
   },
   "toc-autonumbering": false
  },
