--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_word2vec.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_word2vec.ipynb
@@ -11,6 +11,19 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<figure>\n",
+    "<center>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/traje_de_buseo.jpg\" width=\"400\" height=\"600\" align=\"center\"/>\n",
+    "</center>\n",
+    "</figure>\n",
+    "\n",
+    "Fuente: [Pexels](https://www.pexels.com/es-es/foto/comida-creativo-azucar-evento-4016509/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
@@ -1901,7 +1914,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
