--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/pln_sesion_04_02_atencion_pln.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/pln_sesion_04_02_atencion_pln.ipynb
@@ -126,7 +126,7 @@
     "</figcaption>\n",
     "</figure>\n",
     "\n",
-    "Fuente: [Write a Sequence to Sequence (seq2seq) Model](https://docs.chainer.org/en/stable/examples/seq2seq.html)"
+    "Fuente: [Attn: Illustrated Attention](https://towardsdatascience.com/attn-illustrated-attention-5ec4ad276ee3#0458)"
    ]
   },
   {
@@ -193,7 +193,7 @@
     "</figcaption>\n",
     "</figure>\n",
     "\n",
-    "Fuente: [Basado en Write a Sequence to Sequence (seq2seq) Model](https://docs.chainer.org/en/stable/examples/seq2seq.html)"
+    "Fuente: [Attn: Illustrated Attention](https://towardsdatascience.com/attn-illustrated-attention-5ec4ad276ee3#0458)"
    ]
   },
   {
@@ -227,7 +227,7 @@
     "</figcaption>\n",
     "</figure>\n",
     "\n",
-    "Fuente: [Write a Sequence to Sequence (seq2seq) Model](https://docs.chainer.org/en/stable/examples/seq2seq.html)"
+    "Fuente: [Attn: Illustrated Attention](https://towardsdatascience.com/attn-illustrated-attention-5ec4ad276ee3#0458)"
    ]
   },
   {
@@ -257,7 +257,7 @@
     "</figcaption>\n",
     "</figure>\n",
     "\n",
-    "Fuente: [Write a Sequence to Sequence (seq2seq) Model](https://docs.chainer.org/en/stable/examples/seq2seq.html)"
+    "Fuente: [Attn: Illustrated Attention](https://towardsdatascience.com/attn-illustrated-attention-5ec4ad276ee3#0458)"
    ]
   },
   {
@@ -291,7 +291,7 @@
     "</figcaption>\n",
     "</figure>\n",
     "\n",
-    "Fuente: [Write a Sequence to Sequence (seq2seq) Model](https://docs.chainer.org/en/stable/examples/seq2seq.html)"
+    "Fuente: [Attn: Illustrated Attention](https://towardsdatascience.com/attn-illustrated-attention-5ec4ad276ee3#0458)"
    ]
   },
   {
@@ -403,7 +403,7 @@
     "</figcaption>\n",
     "</figure>\n",
     "\n",
-    "Fuente: [Write a Sequence to Sequence (seq2seq) Model](https://docs.chainer.org/en/stable/examples/seq2seq.html)"
+    "Fuente: [Attn: Illustrated Attention](https://towardsdatascience.com/attn-illustrated-attention-5ec4ad276ee3#0458)"
    ]
   },
   {
@@ -433,7 +433,7 @@
     "</figcaption>\n",
     "</figure>\n",
     "\n",
-    "Fuente: [Write a Sequence to Sequence (seq2seq) Model](https://docs.chainer.org/en/stable/examples/seq2seq.html)"
+    "Fuente: [Attn: Illustrated Attention](https://towardsdatascience.com/attn-illustrated-attention-5ec4ad276ee3#0458)"
    ]
   },
   {
@@ -456,7 +456,7 @@
     "</figcaption>\n",
     "</figure>\n",
     "\n",
-    "Fuente: [Write a Sequence to Sequence (seq2seq) Model](https://docs.chainer.org/en/stable/examples/seq2seq.html)"
+    "Fuente: [Attn: Illustrated Attention](https://towardsdatascience.com/attn-illustrated-attention-5ec4ad276ee3#0458)"
    ]
   },
   {
@@ -510,7 +510,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "<figure>\n",
     "<center>\n",
     "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/NMT_Bahdanau.png\" width=\"700\" height=\"700\" align=\"center\"/>\n",
@@ -520,7 +519,7 @@
     "</figcaption>\n",
     "</figure>\n",
     "\n",
-    "Fuente: [Write a Sequence to Sequence (seq2seq) Model](https://docs.chainer.org/en/stable/examples/seq2seq.html)"
+    "Fuente: [Attn: Illustrated Attention](https://towardsdatascience.com/attn-illustrated-attention-5ec4ad276ee3#0458)"
    ]
   },
   {
@@ -562,7 +561,7 @@
     "</figcaption>\n",
     "</figure>\n",
     "\n",
-    "Fuente: [Write a Sequence to Sequence (seq2seq) Model](https://docs.chainer.org/en/stable/examples/seq2seq.html)"
+    "Fuente: [Attn: Illustrated Attention](https://towardsdatascience.com/attn-illustrated-attention-5ec4ad276ee3#0458)"
    ]
   },
   {
@@ -597,7 +596,7 @@
     "</figcaption>\n",
     "</figure>\n",
     "\n",
-    "Fuente: [Write a Sequence to Sequence (seq2seq) Model](https://docs.chainer.org/en/stable/examples/seq2seq.html)"
+    "Fuente: [Attn: Illustrated Attention](https://towardsdatascience.com/attn-illustrated-attention-5ec4ad276ee3#0458)"
    ]
   },
   {
@@ -642,7 +641,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.4"
   },
   "toc-autonumbering": false
  },
