--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_word2vec.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_word2vec.ipynb
@@ -740,7 +740,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/CBOW_net_arq.png\" width=\"400\" height=\"300\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/CBOW_net_arq.png\" width=\"400\" height=\"300\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Arquitectura de la red para el modelo CBOW</p>\n",
@@ -819,7 +819,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/CBOW_coordinates.png\" width=\"800\" height=\"800\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/CBOW_coordinates.png\" width=\"800\" height=\"800\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Embedding de algunas palabras en el modelo CBOW</p>\n",
@@ -903,7 +903,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/SKIP_gram.png\" width=\"300\" height=\"300\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/SKIP_gram.png\" width=\"300\" height=\"300\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Modelo Skip-gram</p>\n",
@@ -1142,7 +1142,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/skip-gramar_plot.png\" width=\"400\" height=\"200\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/skip-gramar_plot.png\" width=\"400\" height=\"200\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Arquitectura Nuroronal del modelo Skip-gram</p>\n",
@@ -1211,7 +1211,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/incrustaciones_skip_gram.png\" width=\"1000\" height=\"1000\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/incrustaciones_skip_gram.png\" width=\"1000\" height=\"1000\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -1281,7 +1281,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/TSNK-Skip-gram.png\" width=\"800\" height=\"800\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/TSNK-Skip-gram.png\" width=\"800\" height=\"800\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Grafico TSNE de palabras similares</p>\n",
