--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/pln_sesion_05_02_transformer_chatbot-Alvaro.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/pln_sesion_05_02_transformer_chatbot-Alvaro.ipynb
@@ -980,7 +980,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/multi_head_attention.png\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/multi_head_attention.png\" width=\"400\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Atención multi-cabeza</p>\n",
